column name fixed

--- a/client/src/i18n/locales/en/translations.json
+++ b/client/src/i18n/locales/en/translations.json
@@ -2,7 +2,7 @@
     "home": "Home",
     "about": "About",
     "rank": "Rank",
-    "airQuality": "Air Quality",
+    "airQuality": "Air Quality Index",
     "capital": "Country Capital",
     "flag": "Country Flag",
     "name": "Country Name",
